--- a/templates/teacher/generatepaper.html
+++ b/templates/teacher/generatepaper.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_min.css')}}">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 
 </head>
 <body class="bg-cover bg-center bg-no-repeat" style="background-image: url('../../static/images/pexels-jakub-novacek-924824.jpg');">
@@ -16,10 +17,6 @@
 <header>
     <nav class="bg-black border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <!-- <a href="" class="flex items-center space-x-3 rtl:space-x-reverse ">
-                <img src="../../static/images/logo3.png" class="h-24" alt="Kyubee Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
-            </a> -->
 
             <a href="" class="flex">
                 <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />
@@ -45,18 +42,20 @@
                     </li>
 
                     <li>
-                        <a href="{{ url_for('generate_paper') }}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Generate Paper</a>
+                        <a href="{{ url_for('question_paper_upload') }}"
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload
+                            Papers</a>
                     </li>
 
                     <li>
-                        <a href="{{ url_for('upload_paper') }}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload Papers</a>
+                        <a href="{{ url_for('upload_notes') }}"
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload
+                            Notes</a>
                     </li>
 
                     <li>
                         <a href="{{url_for('teacher_account')}}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Account</a>
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Profile</a>
                     </li>
 
                     <li>
@@ -68,21 +67,6 @@
                             <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
                                 <div>{{ current_user.EMAIL }}</div>
                             </div>
-                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                                aria-labelledby="avatarButton">
-                                <li>
-                                    <a href="#"
-                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
-                                </li>
-                                <li>
-                                    <a href="#"
-                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
-                                </li>
-                                <li>
-                                    <a href="#"
-                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
-                                </li>
-                            </ul>
                             <div class="py-1">
                                 <a href="{{url_for('logout')}}"
                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
@@ -144,22 +128,6 @@
                 }
             </script>
 
-            <!--            <h1 class="text-center text-3xl font-black">OR</h1>-->
-            <!--            <div id="questions-input-div">-->
-            <!--                <div class="mb-6">-->
-            <!--                    <label for="default-input" class="block mb-2 text-sm font-medium text-gray-900">Enter your-->
-            <!--                        question here</label>-->
-            <!--                    <input name="question" type="text" id="default-input" autocomplete="off"-->
-            <!--                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">-->
-            <!--                </div>-->
-            <!--            </div>-->
-
-            <!--            <div class="flex justify-between">-->
-            <!--                <button type="button" id="questionBtn"-->
-            <!--                        class="px-2 py-1 rounded bg-orange-500 text-white text-sm">Add Question</button>-->
-            <!--                <button type="Submit" id="questionBtn"-->
-            <!--                        class="px-2 py-1 rounded bg-green-500 text-white text-sm">Submit</button>-->
-            <!--            </div>-->
         </form>
     </div>
 
