--- a/templates/teacher/questionpaperupload.html
+++ b/templates/teacher/questionpaperupload.html
@@ -41,10 +41,10 @@
             margin-bottom: 4px;
         }
 
-        .remove-button {
-            background-color: #f44336;
-            color: #fff;
-        }
+        /*.remove-button {*/
+        /*    background-color: #f44336;*/
+        /*    color: #fff;*/
+        /*}*/
     </style>
 </head>
 <body class="bg-cover bg-center bg-no-repeat"
@@ -53,7 +53,7 @@
     <nav class="bg-black border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
-            <a href="{{ url_for('teacher_dashboard') }}" class="flex">
+            <a href="" class="flex">
                 <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
             </a>
@@ -75,6 +75,7 @@
                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
                            aria-current="page">Home</a>
                     </li>
+
                     <li>
                         <a href="{{ url_for('question_paper_upload') }}"
                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload
@@ -101,21 +102,6 @@
                             <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
                                 <div>{{ current_user.EMAIL }}</div>
                             </div>
-                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                                aria-labelledby="avatarButton">
-                                <li>
-                                    <a href="#"
-                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
-                                </li>
-                                <li>
-                                    <a href="#"
-                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
-                                </li>
-                                <li>
-                                    <a href="#"
-                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
-                                </li>
-                            </ul>
                             <div class="py-1">
                                 <a href="{{url_for('logout')}}"
                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
@@ -145,10 +131,10 @@
                     class="text-white end-2.5 bottom-2.5 mt-6 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 Extract Text
             </button>
-            <button id="remove-all"
-                    class="text-white end-2.5 bottom-2.5 mt-6 ml-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                Remove All
-            </button>
+<!--            <button id="remove-all"-->
+<!--                    class="text-white end-2.5 bottom-2.5 mt-6 ml-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">-->
+<!--                Remove All-->
+<!--            </button>-->
         </div>
     </form>
     <div class="flex justify-between">
@@ -196,7 +182,7 @@
                             <option value="evaluating">Evaluating</option>
                             <option value="creating">Creating</option>
                         </select>
-                        <button class="remove-button">Remove</button>
+<!--                        <button class="remove-button">Remove</button>-->
                     </div>
                 </div>
                 {% endif %}
