--- a/templates/teacher/teacherdashboard.html
+++ b/templates/teacher/teacherdashboard.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>Teacher Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
-<!--    <link rel="stylesheet" href="./main.css">-->
+    <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_min.css')}}">
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-
-
-
 </head>
 
 <body class="bg-cover bg-center bg-no-repeat" style="background-image: url('../../static/images/pexels-jakub-novacek-924824.jpg');">
@@ -71,13 +68,6 @@
                             <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
                                 <div>{{ current_user.EMAIL }}</div>
                             </div>
-                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                                aria-labelledby="avatarButton">
-                                <li>
-                                    <a href="#"
-                                       class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
-                                </li>
-                            </ul>
                             <div class="py-1">
                                 <a href="{{url_for('logout')}}"
                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
@@ -90,21 +80,19 @@
         </div>
     </nav>
 </header>
+
 <div class="alert bg-opacity-50">
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
     {% for category, message in messages %}
     {% if 'Current User Logged In' in message %}
-    <div class="alert text-white">
+    <div class="alert alert-{{ category }}">
         {{ message }}
     </div>
     {% endif %}
     {% endfor %}
     {% endif %}
     {% endwith %}
-</div>
-
-
 <main class="h-[100vh] w-full bg-cover bg-center bg-no-repeat">
     <div class="flex flex-col justify-start items-center pt-40 gap-5">
         <h1 class="text-7xl font-medium text-white mt-22">WELCOME {{current_user.first_name + " " + current_user.last_name}}</h1>
@@ -133,7 +121,7 @@
 </section>
 <script>
     document.getElementById('scrollButton').addEventListener('click', function() {
-      smoothScroll('#section2');
+        smoothScroll('#section2');
     });
 
     function smoothScroll(targetSelector) {
@@ -146,12 +134,6 @@
         }
     }
 </script>
-<!--<script>-->
-<!--    const button = document.getElementById('noteButton');-->
-<!--        button.addEventListener('click', function () {-->
-<!--    window.open('/notes-display?pdf=' + uuid, '_blank');-->
-<!--    });-->
-<!--</script>-->
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
@@ -186,7 +168,5 @@
         });
     });
 </script>
-
-
-
 </body>
+</html>
