--- a/templates/student/studentgeneratepaper.html
+++ b/templates/student/studentgeneratepaper.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/tailwind_min.css')}}">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
-
 </head>
 
 <body class="bg-cover bg-center bg-no-repeat bg-auto"
@@ -163,9 +162,8 @@
                 <p class="mb-5 text-center lg:text-5xl text-white font-bold">YOUR GENERATED PAPER</p>
 
                 <div class="flex justify-between">
-                    <textarea id="fetched-questions-area" name="fetched-questions-area" rows="27" cols="50" class="resize-none mr-8 flex w-2/3 mx-auto p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-white bg-gray-800 font-semibold">
-                        {%for q in fetched_questions %}{{q.details}}
-                        {%endfor%}
+                    <textarea id="fetched-questions-area" name="fetched-questions-area" rows="27" cols="50" class="resize-none mr-8 flex w-2/3 mx-auto p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-white bg-gray-800 font-semibold">{%for q in fetched_questions %}{{q.details}}
+                    {%endfor%}
                     </textarea>
 
                     <textarea readonly id="gptAnswers" name="gptAnswers" rows="27" cols="60" placeholder="Enter your questions here..." class="resize-none mr-8 flex w-2/3 mx-auto p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent text-white bg-gray-800 font-semibold placeholder-green-700">
@@ -173,14 +171,32 @@
 
                 </div>
                 <div class="flex justify-center">
-                    <button onclick="sendToGPT()" name="gpt-answer" class="mt-6 text-white end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 ">Answer</button>
+                    <button onclick="sendToGPT()" name="gpt-answer" class="mt-6 text-white end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-large rounded-lg text-lg px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 ">Answer with AI</button>
+
+                    <button onclick="convertToPDF()" name="text-to-pdf" class="mt-6 flex justify-center text-white mx-auto bg-blue 700 hover:bg-blue-800 focus:ring-4 font-large rounded-lg text-lg px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700">Export to PDF</button>
                 </div>
 
             {% endif %}
-
         </section>
     </form>
+
 </main>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+<script>
+
+    function convertToPDF() {
+        event.preventDefault();
+        const text = document.getElementById('fetched-questions-area').value;
+        const doc = new jsPDF();
+        doc.text(text, 10, 10);
+        doc.save('textarea_to_pdf.pdf');
+    }
+</script>
+
 <script>
     async function sendToGPT() {
         event.preventDefault();
@@ -287,5 +303,4 @@
 </script>
 </body>
 </html>
-
 
